Added temp main page

--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -14,7 +14,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="icon" type="image" href="media/favicon/get3.png">
+    <link rel="icon" type="image" href="../media/favicon/get3.png">
 </head>
 
 <style>
@@ -22,7 +22,7 @@ body {font-family: "Oswald", Open Sans; font-weight: 700; }
 h1 {font-family: "Oswald", Open Sans; font-weight: 900; font-size: 40px;}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('media/map_rote.jpeg');
+  background-image: url('../media/map_rote.jpeg');
   min-height: 100%;;
   background-position: center;
   background-repeat: no-repeat;
@@ -35,11 +35,10 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-text-white w3-text-bold">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-center ">Interactive ROTE TB</h1>
+    <h1 class="w3-jumbo w3-animate-top w3-center ">Full Map Coming Soon</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-xlarge w3-center"><a href="html/main_temp.html"><img src="media/reva_shard.png" alt="KAM" style="width:42px;height:42px;">Rise of the Empire TB Map</a></p>
     <p class="w3-large w3-center"> 
-    <a href="html/authors.html"> Authors and Credits </a>&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> Squad Suggestion?</a>
+    <a href="mustafar.html"> DS1 - Mustafar </a>
     </p>
     <!---<p class="w3-xlarge w3-center">--->
     <!---<a href="html/skaarbot.html"> Discord Bot</a>--->
@@ -53,7 +52,7 @@ body, html {height: 100%}
     <p class="w3-center">Pre-release Version. In Development.</p>
     
     <!-- Guild Advert. Will add/remove when appropriate -->
-    <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 26 Stars ROTE - 1 Permanent Space Available!</a></p>
+    <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="../media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 26 Stars ROTE - 1 Permanent Space Available!</a></p>
 
 
 
