--- a/html/mustafar.html
+++ b/html/mustafar.html
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 </template>
-<div class="top-left"><a href="../index.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
+<div class="top-left"><a href="main_temp.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/mustafar.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
