Update google tag

--- a/html/authors.html
+++ b/html/authors.html
@@ -58,6 +58,7 @@ p {margin-top: 0.5em ; margin-bottom: 0.5em ; line-height: 1em;}
 	 <ul>
      <li> Branched from original repository by <a href=https://github.com/jetkokos/tb_geo>jetkokos</a> who we contacted and gave us permission to publish<br></li>
      <li> Information and images taken from the <a href ="https://wiki.swgoh.help/wiki/Main_Page">SWGOH wiki</a> </li>
+     <li> Information and images taken from the <a href ="https://starwars.fandom.com/">Wookiepedia</a> </li>
      <li> Information and images taken from in-game and the <a href = "https://forums.galaxy-of-heroes.starwars.ea.com/">SWGOH Forums</a></li>
      <!--<li> Youtube creators credited in the popups, please drop them a like. (no affiliations)</li>-->
       </ul>
@@ -81,16 +82,15 @@ For changes and updates, please consult the issues portion of the <a href=https:
  
 </div>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174928426-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7G9QJXCBX4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-174928426-1');
+  gtag('config', 'G-7G9QJXCBX4');
 </script>
-
 
 </body>
 
