--- a/html/main.html
+++ b/html/main.html
@@ -189,16 +189,15 @@
 <div class="top-left"><a href="../index.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/main.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174928426-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7G9QJXCBX4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-174928426-1');
+  gtag('config', 'G-7G9QJXCBX4');
 </script>
-
 
 </body>
 </html>
