--- a/html/mustafar.html
+++ b/html/mustafar.html
@@ -114,14 +114,14 @@
 <div class="top-left"><a href="main_temp.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/mustafar.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-174928426-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7G9QJXCBX4"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-174928426-1');
+  gtag('config', 'G-7G9QJXCBX4');
 </script>
 
 
