--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -40,6 +40,9 @@ body, html {height: 100%}
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center"> 
     <a href="mustafar.html"> DS1 - Mustafar </a>
+    </p><p class="w3-large w3-center"> 
+    <a href="geonosis.html"> DS2 - Geonosis </a>
+
     </p>
     <!---<p class="w3-xlarge w3-center">--->
     <!---<a href="html/skaarbot.html"> Discord Bot</a>--->
