Added Coruscant (LS1)

--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -42,6 +42,8 @@ body, html {height: 100%}
     <a href="mustafar.html"> DS1 - Mustafar </a>
     </p><p class="w3-large w3-center"> 
     <a href="corellia.html"> M1 - Corellia </a>
+    </p><p class="w3-large w3-center">
+    <a href="coruscant.html"> LS1 - Coruscant </a>
     </p><p class="w3-large w3-center"> 
     <a href="geonosis.html"> DS2 - Geonosis </a>
 
