Tidied temp main
Tidied temporary main page to be a bit more useable. Added links to pages yet to be added.

--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -31,32 +31,107 @@ body, html {height: 100%}
   background-size: cover;
   opacity: 1.0;
 }
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
 </style>
 <body>
 
 <div class="bgimg w3-display-container w3-text-white w3-text-bold">
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-center ">Full Map Coming Soon</h1>
+    <h1 class="w3-jumbo w3-animate-top w3-center ">Phase 1-3</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"> 
-    <a href="mustafar.html"> DS1 - Mustafar </a>
-    </p><p class="w3-large w3-center"> 
-    <a href="corellia.html"> M1 - Corellia </a>
-    </p><p class="w3-large w3-center">
-    <a href="coruscant.html"> LS1 - Coruscant </a>
-    </p><p class="w3-large w3-center"> 
-    <a href="geonosis.html"> DS2 - Geonosis </a>
-
+    <style type="text/css">
+     .tg  {border-collapse:collapse;border-spacing:0;}
+     .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+      overflow:hidden;padding:10px 5px;word-break:normal;}
+     .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+      font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+     .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+    </style>
+    <table class=" w3-xxlarge w3-center " style="margin:auto ">
+<thead>
+  <tr>
+    <td class="tg-0pky"><a href="dathomir.html"> DS3 - Dathomir </a>
+    <p class="w3-large w3-center">
+    <br>1*:158,960,938
+    <br>2*:254,337,500
+    <br>3*:339,116,667
     </p>
+    </td>
+    <td class="tg-0pky"><a href="tatooine.html"> M3 - Tatooine </a>
+    <p class="w3-large w3-center">
+    <br>1*:190,953,125
+    <br>2*:305,525,000
+    <br>3*:407,366,667
+    </p>
+    </td>
+    <td class="tg-0pky"><a href="kashyyyk.html"> LS3 - Kashyyyk </a>
+    <p class="w3-large w3-center">
+    <br>1*:190,953,125
+    <br>2*:305,525,000
+    <br>3*:407,366,667
+    </p>
+    </td>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0pky"><a href="geonosis.html"> DS2 - Geonosis </a>
+    <p class="w3-large w3-center">
+    <br>1*:148,125,000
+    <br>2*:237,000,000
+    <br>3*:316,000,000
+    </p>
+    </td>
+    <td class="tg-0pky"><a href="felucia.html"> M2 - Felucia </a>
+    <p class="w3-large w3-center">
+    <br>1*:148,125,000
+    <br>2*:237,000,000
+    <br>3*:316,000,000
+    </p>
+    </td>
+    <td class="tg-0pky"><a href="bracca.html"> LS2 - Bracca </a>
+    <p class="w3-large w3-center">
+    <br>1*:142,265,625
+    <br>2*:227,625,000
+    <br>3*:303,500,000
+    </p>
+    </td>
+  </tr>
+  <tr>
+    <td class="tg-0pky"><a href="mustafar.html"> DS1 - Mustafar </a>
+    <p class="w3-large w3-center">
+    <br>1*:116,406,250
+    <br>2*:186,250,000
+    <br>3*:248,333,333
+    </p>
+    </td>
+    <td class="tg-0pky"><a href="corellia.html"> M1 - Corellia </a>
+    <p class="w3-large w3-center">
+    <br>1*:111,718,750
+    <br>2*:178,750,000
+    <br>3*:238,333,333
+    </p>
+    </td>
+    <td class="tg-0pky"><a href="coruscant.html"> LS1 - Coruscant </a>
+    <p class="w3-large w3-center">
+    <br>1*:116,406,250
+    <br>2*:186,250,000
+    <br>3*:248,333,333
+    </p>
+    </td>
+  </tr>
+</tbody>
+</table>
+    
     <!---<p class="w3-xlarge w3-center">--->
     <!---<a href="html/skaarbot.html"> Discord Bot</a>--->
     <!---</p>--->
     <p class="w3-xlarge w3-center"> 
     <!--<a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> Squad Suggestion?</a>&nbsp;&nbsp;&nbsp; <a href="html/strats.html"> Guild Deployment Strats (WIP)</a>-->
     </p>
-    <p class="w3-center">*Designed to run on a desktop web browser.</p>
-
-
     <p class="w3-center">Pre-release Version. In Development.</p>
     
     <!-- Guild Advert. Will add/remove when appropriate -->
