Updated main temp message

--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -132,7 +132,7 @@ table, th, td {
     <p class="w3-xlarge w3-center"> 
     <!--<a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> Squad Suggestion?</a>&nbsp;&nbsp;&nbsp; <a href="html/strats.html"> Guild Deployment Strats (WIP)</a>-->
     </p>
-    <p class="w3-center">Pre-release Version. In Development.</p>
+    <p class="w3-center">Pre-release Version. In Development. Will be replaced with full map once complete.</p>
     
     <!-- Guild Advert. Will add/remove when appropriate -->
     <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="../media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 26 Stars ROTE - 1 Permanent Space Available!</a></p>
