Updated squad sugg link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body, html {height: 100%}
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-xlarge w3-center"><a href="html/main_temp.html"><img src="media/reva_shard.png" alt="KAM" style="width:42px;height:42px;">Rise of the Empire TB Map</a></p>
     <p class="w3-large w3-center"> 
-    <a href="html/authors.html"> Authors and Credits </a>&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> Squad Suggestion?</a>
+    <a href="html/authors.html"> Authors and Credits </a>&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/28uDpDob7tsUHTZ8A"> Squad Suggestion?</a>
     </p>
     <!---<p class="w3-xlarge w3-center">--->
     <!---<a href="html/skaarbot.html"> Discord Bot</a>--->
