Tidy for initial 0.0.1 release

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body, html {height: 100%}
     <p class="w3-center">*Designed to run on a desktop web browser.</p>
 
 
-    <p class="w3-center">Pre-release Version. In Development.</p>
+    <p class="w3-center">Version 0.0.1 - In Development.</p>
     
     <!-- Guild Advert. Will add/remove when appropriate -->
     <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 26 Stars ROTE - 1 Permanent Space Available!</a></p>
