--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -38,7 +38,9 @@ table, th, td {
 </style>
 <body>
 
+
 <div class="bgimg w3-display-container w3-text-white w3-text-bold">
+	<div class="top-left w3-xxlarge"><a href="../index.html" style="color:#FFFFFF;"> &#127968 Title </a></div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top w3-center ">Phase 1-3</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
@@ -132,8 +134,8 @@ table, th, td {
     <p class="w3-xlarge w3-center"> 
     <!--<a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> Squad Suggestion?</a>&nbsp;&nbsp;&nbsp; <a href="html/strats.html"> Guild Deployment Strats (WIP)</a>-->
     </p>
-    <p class="w3-center">Pre-release Version. In Development. Will be replaced with full map once complete.</p>
-    
+    <p class="w3-center">Version 0.0.1 -  Will be replaced with full interactive map once complete.</p>
+    <p class="w3-center">Team recommendations still being optimised and updated as more reliable compositions are found.</p>
     <!-- Guild Advert. Will add/remove when appropriate -->
     <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="../media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 26 Stars ROTE - 1 Permanent Space Available!</a></p>
 
