Updated font sizes

--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -52,25 +52,25 @@ table, th, td {
       font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
      .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
     </style>
-    <table class=" w3-xlarge w3-center " style="margin:auto ">
+    <table class=" w3-large w3-center " style="margin:auto ">
 <thead>
   <tr>
     <td class="tg-0pky"><a href="dathomir.html"> DS3 - Dathomir </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:158,960,938
     <br>2*:254,337,500
     <br>3*:339,116,667
     </p>
     </td>
     <td class="tg-0pky"><a href="tatooine.html"> M3 - Tatooine </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:190,953,125
     <br>2*:305,525,000
     <br>3*:407,366,667
     </p>
     </td>
     <td class="tg-0pky"><a href="kashyyyk.html"> LS3 - Kashyyyk </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:190,953,125
     <br>2*:305,525,000
     <br>3*:407,366,667
@@ -81,21 +81,21 @@ table, th, td {
 <tbody>
   <tr>
     <td class="tg-0pky"><a href="geonosis.html"> DS2 - Geonosis </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:148,125,000
     <br>2*:237,000,000
     <br>3*:316,000,000
     </p>
     </td>
     <td class="tg-0pky"><a href="felucia.html"> M2 - Felucia </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:148,125,000
     <br>2*:237,000,000
     <br>3*:316,000,000
     </p>
     </td>
     <td class="tg-0pky"><a href="bracca.html"> LS2 - Bracca </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:142,265,625
     <br>2*:227,625,000
     <br>3*:303,500,000
@@ -104,21 +104,21 @@ table, th, td {
   </tr>
   <tr>
     <td class="tg-0pky"><a href="mustafar.html"> DS1 - Mustafar </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:116,406,250
     <br>2*:186,250,000
     <br>3*:248,333,333
     </p>
     </td>
     <td class="tg-0pky"><a href="corellia.html"> M1 - Corellia </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:111,718,750
     <br>2*:178,750,000
     <br>3*:238,333,333
     </p>
     </td>
     <td class="tg-0pky"><a href="coruscant.html"> LS1 - Coruscant </a>
-    <p class="w3-medium w3-center">
+    <p class="w3-small w3-center">
     1*:116,406,250
     <br>2*:186,250,000
     <br>3*:248,333,333
