--- a/html/main_temp.html
+++ b/html/main_temp.html
@@ -40,9 +40,9 @@ table, th, td {
 
 
 <div class="bgimg w3-display-container w3-text-white w3-text-bold">
-	<div class="top-left w3-xxlarge"><a href="../index.html" style="color:#FFFFFF;"> &#127968 Title </a></div>
+	<div class="top-left w3-xlarge"><a href="../index.html" style="color:#FFFFFF;"> &#127968 </a></div>
   <div class="w3-display-middle">
-    <h1 class="w3-jumbo w3-animate-top w3-center ">Phase 1-3</h1>
+    <h1 class="w3-xlarge w3-animate-top w3-center ">Phase 1-3</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <style type="text/css">
      .tg  {border-collapse:collapse;border-spacing:0;}
