Added fixed note to bracca r5

--- a/html/main.html
+++ b/html/main.html
@@ -16,96 +16,123 @@
 	<div class="container-fluid ">
 		<div class="row justify-content-center h-100 text-center">
 			<div id="app" class="map">
-				<svg viewBox="0 0 1000 667">
-		
-					<path  class="part" d="m 274.83661,149.25689 59.74709,46.60273 v 76.47628 l -28.42569,20.50156 -226.410921,
-				    -59.76965 28.093778,-120.98522 +80.534243,-3.33192 64.653316, 19.28133 6.47627,2.288724 z"					></path>
-					<text x="380" y="205">
-							<tspan x="240" dy="0">1*: 122,490,000</tspan>	
-							<tspan x="240" dy="15">2*: 340,255,000</tspan>	
-							<tspan x="240" dy="15">3*: 453,670,000 </tspan>	
+				<svg viewBox="0 0 750 500">
+                    <path  class="part" d="M 373 381 A 1 1 0 0 0 372 475 A 1 1 0 0 0 373 381 z"					></path>
+                    <path  class="part" d="M 263 417 L 326 422 C 324 435 330 452 335 461 L 274 482 C 259 455 260 434 263 416 z"					></path>
+	
+                    <!-- DS 1 -->
+                    <path fill="red" class="part" d="M 263 417 L 326 422 C 330 408 332 400 347 388 L 316 337 C 292 350 269 380 263 417 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Dark Side 1</tspan>	
+							<tspan x="340" dy="15">Mustafar</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
 					</text>
-					<path  class="part" d="m 78.83661, 230.25689 -29.74709,121.60273  184.653316, 46.28133 10.57744,-57.288724 70.57744,-50.288724 z"					></path>
-					<text x="140" y="300">
-							<tspan x="140" dy="0">1*: 152,945,000</tspan>	
-							<tspan x="140" dy="15">2*: 270,930,000</tspan>	
-							<tspan x="140" dy="15">3*: 436,980,000</tspan>	
+                    <!-- Mixed 1 -->
+                    <path fill="green" class="part" d="M 346 388 L 316 337 C 327 330 338 327 351 324 L 349 313 C 365 311 381 311 396 314 L 395 325 C 408 327 416 330 429 338 L 398 388 C 384 380 366 378 346 388 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Mixed 1</tspan>	
+							<tspan x="340" dy="15">Corellia</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
 					</text>
+                    <!-- LS 1 -->
+                    <path fill="blue" class="part" d="M 419 422 L 482 416 C 478 390 459 351 429 338 L 399 388 C 410 395 418 412 419 422 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Light Side 1</tspan>	
+							<tspan x="340" dy="15">Coruscant</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
+					</text>
+                    <path  class="part" d="M 419 422 L 482 416 C 489 440 480 466 473 482 L 409 461 C 417 452 421 440 419 422 z"					></path>
+                    <path  class="part" d="M 473 478 L 488 485 L 496 464 L 546 482 C 551 446 553 405 532 367 L 515 374 L 516 378 L 492 386 L 490 382 L 474 389 C 490 418 485 468 473 478 z"					></path>
+                    <path  class="part" d="M 549 426 L 616 425 C 619 444 618 481 613 506 L 547 483 C 551 464 550 445 549 426 z"					></path>
+                    <path  class="part" d="M 684 477 C 682 412 668 356 647 327 L 637 330 L 640 339 L 611 348 L 607 339 L 591 346 C 595.3333 356.3333 599 364 604 377 L 585 382 L 593 424 L 616 425 C 619 437 619 450 618 466 L 684 477 z"					></path>
+                    <path  class="part" d="M 681 425 C 675 384 660 344 637 308 L 642 305 L 625 279 L 667 254 C 708 304 731 357 742 424 L 681 425 z"					></path>
+                    <!-- LS5 -->
+                    <path fill="blue" class="part" d="M 625 279 L 667 254 C 652 235 637 218 619 202 L 627 193 L 599 172 L 591 181 L 578 170 L 549 207 L 561 215 L 557 220 C 573 231 587 243 600 258 L 605 255 L 625 279 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Light Side 5</tspan>	
+							<tspan x="340" dy="15">Kafrene</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
+					</text>
+                    <!-- LS6 -->
+                    <path fill="blue" class="part" d="M 627 209 L 665 176 L 640 155 L 643 151 C 622 135 601 122 577 109 L 574 114 C 559 106 544 99 527 92 L 516 115 L 542 127 L 533 146 C 554 155 573 165 591 181 L 599 171 L 628 193 L 619 202 L 627 209 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Light Side 6</tspan>	
+							<tspan x="340" dy="15">Scarif</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
+					</text>
+                    <!-- Mixed 6 -->
+                    <path fill="green" class="part" d="M 507 133 C 513.6667 119.6667 520.3333 106.3333 527 93 C 496 79 463 71 428 68 L 428 62 L 393 59 L 393 65 C 386 64 380 64 372 64 L 372 109 C 423 109 462 118 507 133 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Mixed 6</tspan>	
+							<tspan x="340" dy="15">Hoth</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
+					</text>
+					<path  class="part" d="M 218 92 C 251 80 282 72 317 67 L 317 62 L 353 59 L 353 64 L 372 64 L 372 109 C 326 107 283 118 238 133 z"					></path>
+                    <!-- DS 6 -->
+                    <path fill="red" class="part" d="M 218 93 L 228 115 L 202 127 L 212 145 C 187 156 174 164 154 181 L 146 171 L 118 193 L 126 202 L 118 209 L 80 176 L 105 155 L 101 151 C 127 132 141 124 168 109 L 171 114 L 218 93 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Dark Side 6</tspan>	
+							<tspan x="340" dy="15">Death Star</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
+					</text>
+                    <!-- DS 5 -->
+                    <path fill="red" class="part" d="M 167 170 L 196 207 L 185 214 L 188 220 C 172 231 158 243 144 259 L 139 256 L 120 280 L 78 254 C 97 231 108 218 126 202 L 117 193 L 146 172 L 154 181 L 167 170 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Dark Side 5</tspan>	
+							<tspan x="340" dy="15">Malachor</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
+					</text>
+                    <path  class="part" d="M 119 280 L 78 255 C 33 309 19 344 9 424 L 64 424 C 74 377 82 345 107 308 L 102 305 L 119 280 z"					></path>
+                    <path  class="part" d="M 98 326 L 108 330 L 104 339 L 134 350 L 138 341 L 152 347 L 141 377 L 161 383 L 152 425 L 129 425 C 127 439 127 451 127 466 L 60 477 C 62 420 71 378 98 326 z"					></path>
+                    <path  class="part" d="M 196 426 L 129 426 C 127 453 129 479 132 505 L 199 483 C 195 461 194 449 196 426 z"					></path>
+                    <path  class="part" d="M 249 464 L 198 483 C 194 444 193 405 214 366 L 231 374 L 229 378 L 253 386 L 255 382 L 271 389 C 256 418 258 452 271 477 L 257 483 L 249 464 z"					></path>
                     
-					<path class="part" d="M 49.747089,350.00711 C 32.575648,398.87862 13.246382,449.71068 -1.1949418,
-					501.76472 v 27.48366 l 44.2128458,41.82296 157.732316,4.77977 35.40779,-173.01365 z"></path>
-					<text x="75" y="450">
-							<tspan x="75" dy="0">1*: 117,510,000</tspan>	
-							<tspan x="75" dy="15">2*: 278,600,000</tspan>	
-							<tspan x="75" dy="15">3*: 335,750,000</tspan>	
+                    <!-- Ls2 -->
+                    <path fill="blue" class="part" d="M 475 388 C 462 361 443 343 418 331 L 426 312 L 424 311 L 434 287 L 437 288 L 442 277 C 456 285 468 289 482 303 L 478 309 L 502 332 L 509 328 C 520 341 525 352 533 366 L 515 373 L 516 378 L 492 386 L 490 382 L 475 388 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Light Side 2</tspan>	
+							<tspan x="340" dy="15">Bracca</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
 					</text>
-					<path class="part" d="m 274.83661,149.25689 59.74709,46.60273 v 76.47628 l 152.95255,-2.38989 50.18755,
-					-44.21284 v -76.47628 z"></path>
-					<text x="430" y="220">
-						<tspan x="430" dy="0">1*: 91 395,000</tspan>	
-						<tspan x="430" dy="15">2*: 152, 325,000</tspan>	
-						<tspan x="430" dy="15">3*: 217,610,000</tspan>	
+                    <!-- Mid 2 -->
+                    <path fill="green" class="part" d="M 419 331 L 426 313 L 424 311 L 435 287 L 437 288 L 442 277 C 393 259 351 259 304 277 L 309 288 L 311 287 L 322 311 L 319 312 L 327 331 L 350 323 L 349 313 C 365 310 379 310 396 313 L 395 324 L 419 331 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Mixed 2</tspan>	
+							<tspan x="340" dy="15">Felucia</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
 					</text>
-					<path class="part" d="m 334.5837,272.3359 152.95255,-2.38989 46.60273,59.74709 -1.19494,70.50157 -191.19069,-8.36459 -50.18755,
-					48.99261 -64.52686,1.19494 19.11907,-99.18017 z"></path>
-					<text x="345" y="330">
-						<tspan x="345" dy="0">1*: 132,310,000</tspan>	
-						<tspan x="345" dy="15">2*: 257,065,000</tspan>	
-						<tspan x="345" dy="15">3*: 378,035,000</tspan>	
+                    <!-- DS2 -->
+                    <path fill="red" class="part" d="M 271 388 L 255 382 L 254 385 L 230 377 L 231 373 L 213 366 C 219 354 226 340 237 328 L 243 332 L 267 309 L 263 302 C 278 289 285 286 304 278 L 308 288 L 311 287 L 322 311 L 319 312 L 327 331 C 299 344 283 365 271 388 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Dark Side 2</tspan>	
+							<tspan x="340" dy="15">Geonosis</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
 					</text>
-					<path class="part" d="m 227.03894,442.01763 64.52686,-1.19494 50.18755,-48.99261 191.19069,8.36459 41.82296,50.18755 7.16965,
-					124.27395 -381.18643,1.19494 z"></path>
-					<text x="345" y="520">
-						<tspan x="345" dy="0">1*: 110,615,000</tspan>	
-						<tspan x="345" dy="15">2*: 165,925,000</tspan>	
-						<tspan x="345" dy="15">3*: 221,230,000</tspan>	
+                    <!-- Ls3 -->
+                    <path fill="blue" class="part" d="M 549 425 L 593 425 L 584 382 L 604 377 C 590 337 575 309 545 281 L 494 325 L 502 333 L 509 328 C 533 360 547 391 549 425 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Light Side 3</tspan></tspan>	
+							<tspan x="340" dy="15">Kashyyyk</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000</tspan>	
 					</text>
-					<path class="part" d="m 534.13898,329.6931 h 86.03581 l 34.65331,-28.6786 82.45098,2.38988 -7.16965,
-					-20.31401 -96.79028, -44.21284 -2.38989,-33.45837 -26.28872,-37.0432 h -14.3393 l -19.11907,-31.06848 -33.45837,
-					11.94941 v 76.47628 l -50.18755,44.21284 z"></path>
-					<text x="545" y="290">
-						<tspan x="545" dy="0">1*: 71,075,000</tspan>	
-						<tspan x="545" dy="15">2*: 133,535,000</tspan>	
-						<tspan x="545" dy="15">3*: 215,380,000</tspan>	
+                    <!-- Ls 4 -->
+                    <path fill="blue" class="part" d="M 592 346 C 578 319 569 301 545 281 L 539 286 L 516 265 L 521 260 L 493 239 L 521 195 L 533 203 L 537 198 L 561 214 L 558 219 C 574 232 585 241 601 258 L 606 254 C 619 270 631 284 642 304 L 637 307 L 647 325 L 637 329 L 640 337 L 611 347 L 608 340 L 592 346 z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Light Side 4</tspan>	
+							<tspan x="340" dy="15">Lothal</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
 					</text>
-					<path class="part" d="m 737.27908,303.40438 -82.45098,-2.38988 -34.65331,28.6786 h -86.03581 l -1.19494,
-					70.50157 41.82296,50.18755 32.26343,-20.31401 h 74.08639 l 25.09378,19.11907 38.23813,-2.38988 z"></path> 
-					<text x="600" y="380">
-						<tspan x="600" dy="0">1*: 96,220,000</tspan>	
-						<tspan x="600" dy="15">2*: 174,235,000</tspan>	
-						<tspan x="600" dy="15">3*: 260,055,000</tspan>	
+                    <path class="part" d="M 494 324 L 538 285 L 516 265 L 520 260 C 496 239 472 227 441 217 L 439 225 L 427 222 L 415 268 C 442 275 463 284 483 302 L 478 308 L 494 324 z"					></path>
+                    <!--
+                    <!-- dsds
+                    <path  class="part" d=" z"					></path>
+					<text x="340" y="415">
+							<tspan x="340" dy="0">Dark Side 1</tspan>	
+							<tspan x="340" dy="15">Mustafar</tspan>	
+							<tspan x="340" dy="15">3*: 453,670,000 </tspan>	
 					</text>
-					<path class="part" d="m 574.767,450.38222 7.16965,124.27395 193.58057,1.19494 -9.55953,-112.32453 -21.50896,
-					-16.72918 -38.23813,2.38988 -25.09378,-19.11907 h -74.08639 z"></path>
-					<text x="640" y="490">
-						<tspan x="640" dy="0">1*: 121,030,000</tspan>	
-						<tspan x="640" dy="15">2*: 217,235,000</tspan>	
-						<tspan x="640" dy="15">3*: 310,335,000</tspan>	
-					</text>
-					<path class="part" d="m 604.64054,168.37596 15.53425,-10.75447 2.38988,-10.75448 268.8619,2.38988 3.58483,
-					22.7039 -99.18017,69.30662 1.19494,59.74709 -59.74709,2.38988 -7.16965,-20.31401 -96.79028,
-					-44.21284 -2.38989,-33.45837 z"></path>
-					<text x="715" y="180">
-						<tspan x="715" dy="0">1*: 42,475,000</tspan>	
-						<tspan x="715" dy="15">2*: 84,950,000</tspan>	
-						<tspan x="715" dy="15">3*: 141,580,000</tspan>	
-					</text>
-					<path class="part" d="m 895.0114,171.96079 -99.18017,69.30662 1.19494,59.74709 -59.74709,2.38988 7.16965,
-					143.39302 21.50896,16.72918 26.28871,-28.6786 h 77.67122 l 64.52686,-129.05371 37.04319,-14.3393 17.92413,
-					-53.77238 -32.26343,-68.11169 -34.65331,4.77977 z"></path>
-					<text x="815" y="305">
-						<tspan x="815" dy="0">1*: 110,240,000</tspan>	
-						<tspan x="815" dy="15">2*: 166,640,000</tspan>	
-						<tspan x="815" dy="15">3*: 256,370,000</tspan>	
-					</text>	
-					<path class="part" d="m 971.48767,291.45497 27.48366,23.89883 3.58487,194.77551 -17.92417,13.14436 3.58483,
-					10.75448 -47.79767,48.99261 -164.90197,-7.16965 -9.55953,-112.32453 26.28871,
-					-28.6786 h 77.67122 l 64.52686,-129.05371 z"></path>
-					<text x="810" y="500">
-						<tspan x="835" dy="0">1*: 86,275,000</tspan>	
-						<tspan x="835" dy="15">2*: 120,425,000</tspan>	
-						<tspan x="835" dy="15">3*: 179,740,000</tspan>	
-					</text>	
+                    -->
+
 				</svg>
 				<mission></mission>
 			</div>
