Updated map links to be to main map

--- a/html/tatooine.html
+++ b/html/tatooine.html
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 </template>
-<div class="top-left"><a href="main_temp.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
+<div class="top-left"><a href="main.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/tatooine.js"></script>
 <!-- Google tag (gtag.js) -->
