--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top w3-center ">Interactive ROTE TB</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-xlarge w3-center"><a href="html/main_temp.html"><img src="media/reva_shard.png" alt="KAM" style="width:42px;height:42px;">Rise of the Empire TB Map</a></p>
+    <p class="w3-xlarge w3-center"><a href="html/main.html"><img src="media/reva_shard.png" alt="KAM" style="width:42px;height:42px;">Rise of the Empire TB Map</a></p>
     <p class="w3-large w3-center"> 
     <a href="html/authors.html"> Authors and Credits </a>&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/28uDpDob7tsUHTZ8A"> Squad Suggestion?</a>
     </p>
@@ -39,10 +39,9 @@ body, html {height: 100%}
     <p class="w3-xlarge w3-center"> 
     <!--<a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> Squad Suggestion?</a>&nbsp;&nbsp;&nbsp; <a href="html/strats.html"> Guild Deployment Strats (WIP)</a>-->
     </p>
-    <p class="w3-center">*Designed to run on a desktop web browser.</p>
+    <p class="w3-center">Version 0.0.2 -  Will be replaced with full interactive map once complete.</p>
+    <p class="w3-center">Team recommendations still being optimised and updated as more reliable compositions are found.</p>
 
-
-    <p class="w3-center">Version 0.0.1 - In Development.</p>
     
     <!-- Guild Advert. Will add/remove when appropriate -->
     <p class="w3-large w3-center"><a href="https://recruit.swgoh.gg/guild/548/blue-squadron-eternal"><img src="media/get3.png" alt="BSE" style="width:42px;height:42px;">BSE - 26 Stars ROTE - 1 Permanent Space Available!</a></p>
