Initial commit of phase 4 planets

--- a/html/authors.html
+++ b/html/authors.html
@@ -60,6 +60,7 @@ p {margin-top: 0.5em ; margin-bottom: 0.5em ; line-height: 1em;}
      <li> Information and images taken from the <a href ="https://wiki.swgoh.help/wiki/Main_Page">SWGOH wiki</a> </li>
      <li> Information and images taken from the <a href ="https://starwars.fandom.com/">Wookiepedia</a> </li>
      <li> Information and images taken from in-game and the <a href = "https://forums.galaxy-of-heroes.starwars.ea.com/">SWGOH Forums</a></li>
+     <li> Image of haven medical station adapted from <a href="https://www.pinterest.dk/pin/275423333440810045/">this pinterest post</a></li> 
       </ul>
     </p>
 
