--- a/html/kessel.html
+++ b/html/kessel.html
@@ -3,12 +3,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ROTE - Kashyyyk</title>
+	<title>ROTE - Kessel</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Interactive Rise of the Empire Territory Battle Map SWGoH">
 	<meta name="keywords" content="swgoh, star wars, rote, territory, battle, map, tactics, interactive, tb_geo, genskaar">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/kashyyyk.css">
+	<link rel="stylesheet" href="../css/kessel.css">
 	<link rel="icon" type="image" href="../media/favicon/get3.png">
 </head>
 <body>
@@ -116,7 +116,7 @@
 </template>
 <div class="top-left"><a href="main.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
 <script src="../js/vue.min.js"></script>
-<script src="../js/kashyyyk.js"></script>
+<script src="../js/kessel.js"></script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7G9QJXCBX4"></script>
 <script>
