Added deployments to p1-4 planets

--- a/html/corellia.html
+++ b/html/corellia.html
@@ -111,6 +111,11 @@
 				<p class="h4">Rewards</p>
 				<span v-for="item in selectedMission.rewards">&nbsp;&nbsp;{{item}}&nbsp;&nbsp;&nbsp;</span>
 			</div>
+            
+            <div class="rewards mb-3" v-if="selectedMission.stars">
+				<p class="h4">Star Requirements</p>
+				<span v-for="item in selectedMission.stars">&nbsp;&nbsp;{{item}}&nbsp;&nbsp;&nbsp;</span>
+			</div>
 		</div>
 	</div>
 </template>
