--- a/html/tatooine.html
+++ b/html/tatooine.html
@@ -111,10 +111,14 @@
 				<p class="h4">Rewards</p>
 				<span v-for="item in selectedMission.rewards">&nbsp;&nbsp;{{item}}&nbsp;&nbsp;&nbsp;</span>
 			</div>
+            
             <div class="rewards mb-3" v-if="selectedMission.stars">
 				<p class="h4">Star Requirements</p>
-				<span v-for="item in selectedMission.stars">&nbsp;&nbsp;{{item}}&nbsp;&nbsp;&nbsp;</span>
+                <ul>
+				    <li class="text-justify" v-for="item in selectedMission.stars">{{item}}</li>
+                </ul>
 			</div>
+            
 		</div>
 	</div>
 </template>
