Test commit of meta viewport line

--- a/html/authors.html
+++ b/html/authors.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="icon" type="image" href="../media/favicon/get3.png">
 </head>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body,h1 {font-family: "Oswald", Open Sans; font-weight: 800}
 body, html {height: 100%}
