Added thanks in authors page

--- a/html/authors.html
+++ b/html/authors.html
@@ -37,16 +37,18 @@ p {margin-top: 0.5em ; margin-bottom: 0.5em ; line-height: 1em;}
     <p style="margin-top:0em; margin-left:-12em"><font size="4">
 		<ul>
       <li>Skaar (Discord GS#1556) <br>
-      Found this site useful? Consider donating a litte: <br><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      Found this site useful? Consider donating a little: <br><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="TJZ4PJMCPJSUJ" />
 <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
 </form></li>
       <li>Original design of geo tb by Jetkokos </li>
-	  <li>Have something to add? Consider contributing to the <a href=https://github.com/genskaar/tb_empire> github repo.</a> or use the <a href="https://forms.gle/fZkX1NKvnwYWSp2x7"> squad suggestion form</a></li>
+	  <li>Have something to add? Consider contributing to the <a href=https://github.com/genskaar/tb_empire> github repo.</a></li>
+      <li> Special thanks to a number of people for contributing to this site including - SonOfABlaster, TheAnimist, SigSig, The folks on the ROTE discord server and everyone in BSE</li>
 	  </ul>
     </p>
+    
 
     
      <!--                          Sources                           -->
