--- a/html/felucia.html
+++ b/html/felucia.html
@@ -31,12 +31,12 @@
 		v-bind:key="mission.name" 
 		v-bind:class="mission.name"
 		v-bind:src="'../media/mission_' +  mission.type + '.png'"
-		@mouseover="isMobile ? null : selectedMission = mission; seen = true" @mouseleave="seen = false"
+		@mouseover="isMobile ? null : selectedMission = mission; seen = true" @click="seen = false"
 		>
 		<!--v-click-outside="hide"-->
 		<div v-if="seen" class="description" v-bind:class="'desc_' + selectedMission.position">
 			
-            <div class="mb-3" v-if="selectedMission.reqs">
+            <div class="mb-3" v-if="selectedMission.reqs">        
 				<p class="h4">Requirements</p>
 					<div v-for="item in selectedMission.reqs">
                         <p>{{reqs[item]}}</p>
@@ -55,6 +55,10 @@
 						>
 					</div>
 				</div>
+			</div>
+			
+			<div class="mb-3" v-if="selectedMission.dangerousEnemies">
+				<p class="h4"><a href="https://forms.gle/28uDpDob7tsUHTZ8A">Suggest a Squad</a></p>
 			</div>
 			
 			<div class="mb-3" v-if="selectedMission.dangerousEnemies">
@@ -120,7 +124,7 @@
 		</div>
 	</div>
 </template>
-<div class="top-left"><a href="main.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
+<div class="top-left"><a href="main.html" style="color:#FFFFFF;"><img src="../media/tatooine.png" width="80px" height="80px" /> Home </a> / Felucia<br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/felucia.js"></script>
 <!-- Google tag (gtag.js) -->
