Added felucia changes to other planets

--- a/html/main.html
+++ b/html/main.html
@@ -8,7 +8,8 @@
 	<meta name="description" content="Interactive Rise of the Empire Territory Battle Map SWGoH">
 	<meta name="keywords" content="swgoh, star wars, rote, territory, battle, map, tactics, interactive, tb_geo, genskaar">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/main.css">
 	<link rel="icon" type="image" href="../media/favicon/get3.png">
 </head>
 <body>
@@ -201,7 +202,8 @@
 		</div>
 	</div>
 </template>
-<div class="top-left"><a href="../index.html" style="color:#FFFFFF;"> &#127968 Home </a><br>
+<div class="top-left"><a href="../index.html" style="color:#FFFFFF;"> <i class="fa fa-home fa-fw"></i>Home </a><br>
+<div class="top-left"><a href="../index.html" style="color:#FFFFFF;"> <i class="fa fa-home fa-fw"></i>Home </a><br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/main.js"></script>
 <!-- Google tag (gtag.js) -->
