--- a/html/deathstar.html
+++ b/html/deathstar.html
@@ -52,7 +52,7 @@
 			<div class="mb-3" v-if="selectedMission.preferredSquads">
 				<p  class="h4">Preferred teams</p>
 				<div v-for="item in selectedMission.preferredSquads">
-					<p>{{squads[item].name}}</p>
+                    <p><a :href="squads[item].video">{{squads[item].name}}</a></p>
 					<div class="img_block">
 						<img 
 						v-for="pic in squads[item].toons"
