--- a/html/scarif.html
+++ b/html/scarif.html
@@ -125,7 +125,7 @@
 		</div>
 	</div>
 </template>
-<div class="top-left"><a href="main.html" style="color:#FFFFFF;"> <i class="fa fa-home fa-fw"></i>Home </a><br>
+<div class="top-left"><a href="main.html" style="color:#FFFFFF;"> <i class="fa fa-home fa-fw"></i>Full Map </a><br>
 <script src="../js/vue.min.js"></script>
 <script src="../js/scarif.js"></script>
 <!-- Google tag (gtag.js) -->
